fix drop down menu visibility

--- a/ui/src/layouts/Header/header.scss
+++ b/ui/src/layouts/Header/header.scss
@@ -24,21 +24,26 @@
         display: none;
         width: 230px;
       }
-      .nav-dropdown {
+      .dropdown {
         position: relative;
-        &:hover .dropdown-menu,
-        &:focus-within .dropdown-menu {
-          display: block;
-          padding: var(--smallSpace);
-          visibility: visible;
-          opacity: 1;
-          background: var(--white);
-          border-radius: var(--cardRadius);
-          .nav-link {
-            color: var(--textColor);
-            margin-left: 0;
-          }
+        display: inline-block;
+      }
+
+      .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: var(--white);
+        min-width: 160px;
+        border-radius: var(--cardRadius);
+        padding: var(--smallSpace);
+        z-index: 1;
+        .nav-link {
+          color: var(--textColor);
+          margin-left: 0;
         }
+      }
+      .dropdown:hover .dropdown-content {
+        display: block;
       }
       .nav-link {
         color: var(--white);
